fixed white space issue

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body
 	background: linear-gradient(to bottom,  rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=0 ); /* IE6-9 */
 	background-attachment:fixed;
+	height:100%;
 }
 html
 {
@@ -22,6 +23,7 @@ html
 	margin-left:10%;
 	margin-right:10%;
 	height:100%;
+	margin-bottom:0px;
 }
 h1, h2 {
 	background: #EBEBEB;
